--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "engines": { "node": "20.x" },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.0",
